--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,16 +2,26 @@
     "name": "Hidden Garden Landpage",
     "short_name": "HGLP",
     "start_url": "/index.php",
-    "background_color": "#6777ef",
     "description": "Tutorial of Laravel Package",
-    "display": "fullscreen",
-    "theme_color": "#6777ef",
     "icons": [
         {
-            "src": "img/BigTreeLogo.png.PNG",
+            "src": "./img/BigTreeLogo128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "/img/BigTreeLogo256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/img/BigTreeLogo512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         }
-    ]
+    ],
+    "theme_color": "#6777ef",
+    "background_color": "#6777ef",
+    "display": "fullscreen",
+    "orientation": "portrait"
 }
